--- a/es_2.0.html
+++ b/es_2.0.html
@@ -50,12 +50,12 @@
 	       </aside>
 <!--Corps du site avec les trois parties principales -->
         <section>
-            <article><h2>Présentation, news du jour </h2><p>Jerome est parti bienvenue a Gregory!!</br>Autre point important, utiliser "Mes services" pour les tracages des actes de services. Pour savoir comment l'utiliser c'est <a href="docs-utiles/mes_services.pdf" target="_blank">ICI</a></p></article>
+            <article id= news><h2>Présentation, news du jour </h2><p>Jerome est parti bienvenue a Gregory!!</br>Autre point important, utiliser "Mes services" pour les tracages des actes de services. Pour savoir comment l'utiliser c'est <a href="docs-utiles/mes_services.pdf" target="_blank">ICI</a></p></article>
 <!--article pour implementer l'anniverssaire du jour-->
-            <article><h2>C'est l'anniverssaire de qui?</h2>
-	    <p class="fete"></p>
+            <article id=anniv><h2>C'est l'anniversaire de qui?</h2>
+	    <p id="fete"></p>
 	    </article>
-	    <article><h2>Le blog de Chris</h2><p>Et voici le flash code pour les comparatifs de christophe, bonne lecture à tous</p><p><img src="images/flashcode.png" alt="Flash code" title="Flash code blog chris" /></p><p><img src="images/flashcodecomparatifliveplug.png" alt="Flash code liveplug" title="Comparatif Live plug" /></p>
+	    <article id=chris><h2>Le blog de Chris</h2><p>Et voici le flash code pour les comparatifs de christophe, bonne lecture à tous</p><p><img src="images/flashcode.png" alt="Flash code" title="Flash code blog chris" /></p><p><img src="images/flashcodecomparatifliveplug.png" alt="Flash code liveplug" title="Comparatif Live plug" /></p>
 	    </article>
 
 <!-- test div pour implementation des annivs-->
