update des fichiers et abandon json pour les citations

--- a/es_2.0.html
+++ b/es_2.0.html
@@ -20,7 +20,7 @@
 <!--Menu d'accueil -->
         <nav><ul>
 
-            <li><a href="es_cours_particuliers/planning_rendez_vous.xls" target="_blank">Cours</a></li>
+            <li><a href="Cours.html" target="_blank">Cours</a></li>
             <li><a href="https://enquete.orange.com/coven/itw/answer/s/13c6yyxupg/k/9l39iscif0" target="_blank"><strong>Dofi</strong></a></li>
             <li><a href="agenda_ct.html" target="_blank">Agenda CT</a></li>
             <li><a href="mailto:david.torrent@orange.com">Contact</a></li>
@@ -70,7 +70,9 @@
 				<p id="auteur"></p>
             </div>
             <div id="effectif"><h3>liste effectif</h3>
-            <ul><li><a href="http://annuaire.sso.infra.ftgroup/persons/Q0lJTTY1MzY" target="_blank">Claude Masbou</a></li>
+            <ul>
+                <li><a href="url intranoo a mettre" target="_blank">Stephanie Manicot</a></li>
+                <li><a href="http://annuaire.sso.infra.ftgroup/persons/Q0lJTTY1MzY" target="_blank">Claude Masbou</a></li>
                 <li><a href="http://annuaire.sso.infra.ftgroup/persons/SVJCWjcxNDE" target="_blank">Christophe Freman</a></li>
                 <li><a href="http://annuaire.sso.infra.ftgroup/persons/TkxGQzAwOTM" target="_blank">Nicolas Potiez</a></li>
                 <li><a href="http://annuaire.sso.infra.ftgroup/persons?searchType=PERSON_SIMPLE&personCriteria.cru=&personCriteria.alphabetical=false&personCriteria.sn=lefevre&personCriteria.snSelect=STARTSWITH&personCriteria.givenName=gregory&personCriteria.givenNameSelect=STARTSWITH&_personCriteria.usePhonetic=on&personCriteria.telephoneNumber=&personCriteria.mail=&personCriteria.ftadmou=&personCriteria.ftsubactivitiescode=&personCriteria.ftactivitiescode=&personCriteria.ftskill=&personCriteria.ftactivities=&personCriteria.siteCriteria.ville=&personCriteria.siteCriteria.site=&personCriteria.siteCriteria.codePostDep=" target="_blank">Gregory Lefevre</a></li>
@@ -86,6 +88,8 @@
 		<script src="ajax.js" type="text/javascript"></script>
 		<script src="dictons.js" type="text/javascript"></script>
 		<script src="anniv.js" type="text/javascript"></script>
+
+</script>
     </body>
 
 </html>
